# atlas-evolution

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  pyproject.toml
atlas_evolution/: __init__.py  __main__.py  cli.py  config.py  feedback_store.py  models.py  openclaw_contract.py  runtime_events.py  skill_bank.py  workflow_state.py
atlas_evolution/evolution/: __init__.py  capability_assessor.py  evaluator.py  governance.py  pipeline.py  prompt_evolver.py  workflow_discoverer.py
atlas_evolution/runtime/: __init__.py  openclaw_adapter.py  orchestrator.py  proxy.py  report_adapter.py
demo/: atlas.toml
demo/openclaw_sessions/: sample_operator_session.json
demo/runtime_events/: sample_batch.json
demo/skills/: code_review.json  skill_design.json  workflow_builder.json
docs/: openclaw_atlas_contract.md  openclaw_plugin_integration.md  operator_review_workflow.md  v1_1_milestone.md  v1_2_productization_roadmap.md
integrations/openclaw-plugin/: README.md  index.js  openclaw.plugin.json  package.json
integrations/openclaw-plugin/fixtures/: operator_session_artifact.json  runtime_event_batch.json
integrations/openclaw-plugin/scripts/: verify_payloads.py
integrations/openclaw-plugin/src/: capture.js  config.js  contracts.js  json.js  plugin.js  transport.js
integrations/openclaw-plugin/test/: plugin.test.js
tests/: test_config.py  test_openclaw_plugin_integration.py  test_pipeline.py  test_runtime_ingest.py  test_skill_bank.py
